# smart_irrigation_sys

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/smart_irrigation/: __main__.py  config.py  core.py
tests/: __init__.py  test_core.py
