[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart_irrigation_sys"
version = "0.1.0"
description = "Smart Irrigation System - IoT-based plant watering controller"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    # Add real deps here later, e.g. "paho-mqtt", etc.
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/smart_irrigation"]